fixed z-index

--- a/src/css/modal-rating.css
+++ b/src/css/modal-rating.css
@@ -1,3 +1,7 @@
+.modal-raiting-wrapper {
+  z-index: 950;
+}
+
 @media screen and (min-width: 320px) and (max-width: 428px) {
   .modal-raiting-wrapper {
     width: 95%;
